--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,16 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* CURRENT: TODO: Add the color palette here, refer to the penpot file */
+  --background: #181a1b;
+  --white-text-color: white;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sulphur-point: var(--font-sulphur-point);
+  --font-outfit: var(--font-outfit);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,6 +22,6 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--white-text-color);
   font-family: Arial, Helvetica, sans-serif;
 }
