--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,3 +1,8 @@
+
+.navBackground {
+  background-color: var(--background);
+}
+
 .navLink {
   position: relative;
   padding-bottom: 2px; /* space for underline */
