Align the mobile view with the mobile mockup for the home page - Make the hero image a component - Add links to the fonts used in the project in the README - Make the jumbotron text change to a smaller font size for mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,3 +77,11 @@ body {
   color: var(--primary-text-color);
   font-family: var(--font-sulphur-point), Arial, Helvetica, sans-serif;
 }
+
+
+/* Mobile breakpoint */
+@media (max-width: 640px) {
+  .jumbotron {
+    font-size: 48px;
+  }
+}
